# codagent

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.cursor/rules/: codagent.mdc
.github/: copilot-instructions.md
.github/workflows/: tests.yml
codagent/: __init__.py  builtin.py  cli.py  langchain_integration.py
codagent/adapters/: __init__.py  markdown.py  nemo.py
codagent/harness/: __init__.py  _abc.py  _harness.py  builtin.py  langchain_integration.py
codagent/harness/adapters/: __init__.py  guardrails_ai.py  markdown.py  nemo.py
codagent/harness/langgraph_nodes/: __init__.py
codagent/harness/targets/: __init__.py  _file_target.py  agents_md.py  claude_code.py  copilot.py  cursor.py  openai_client.py
codagent/integrations/: __init__.py  anthropic_client.py  autogen.py  crewai.py  dspy.py  llamaindex.py  pydantic_ai.py
codagent/langgraph_nodes/: __init__.py
codagent/nodes/: __init__.py  cache.py  loop_guard.py  retry.py  structured.py  timeout.py
codagent/observability/: __init__.py  budget.py  cost.py  prices.json  steps.py  trace.py
codagent/server/: __init__.py  agents.py  app.py  budgets.py  metrics.py  middleware.py  runs.py  sessions.py  stores.py
codagent/targets/: __init__.py  claude_code.py  copilot.py  cursor.py
codagent/tools/: __init__.py  circuit.py  rate_limit.py  validate.py
docs/: CHANGELOG.md  getting-started.md  index.md  server.md
docs/frameworks/: anthropic.md  langchain.md  langgraph.md  llamaindex.md  openai.md  pydantic-ai.md
docs/guides/: behavior-contracts.md  meta-agent-supervisor.md  production-hardening.md
docs/modules/: harness.md  integrations.md  nodes.md  observability.md  tools.md
examples/: basic.py  cli_demo.sh  langgraph_customer_support.py  langgraph_full_stack.py  meta_agent_compliance.py  tool_use_validation.py
src/codagent/: __init__.py  _harness.py  builtin.py  core.py
src/codagent/adapters/: __init__.py  guardrails_ai.py  openai_adapter.py
src/codagent/langgraph_nodes/: __init__.py
src/codagent/targets/: _file_target.py  agents_md.py  openai_client.py
tests/: test_adapters.py  test_contracts.py  test_core.py  test_integrations.py  test_langchain_integration.py  test_new_features.py  test_nodes.py  test_observability.py  test_server.py  test_server_agents.py  test_server_budgets.py  test_server_contracts.py  test_server_extensions.py  test_server_lifecycle.py  test_server_metrics.py  test_server_middleware.py  test_server_runs.py  test_server_sessions.py  test_server_stores.py  test_targets.py  test_tools.py
